--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(tw_filter_people)
 export(tw_get)
 export(tw_get_cache_folder)
 export(tw_get_label)
+export(tw_get_property)
 export(tw_search)
 export(tw_set_cache_folder)
 importFrom(magrittr,"%>%")
