--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(tw_filter)
 export(tw_filter_people)
 export(tw_get)
 export(tw_get_cache_folder)
+export(tw_get_description)
 export(tw_get_label)
 export(tw_get_property)
 export(tw_search)
