--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,10 @@ export(tw_filter_people)
 export(tw_get)
 export(tw_get_cache_folder)
 export(tw_get_description)
+export(tw_get_image)
 export(tw_get_label)
 export(tw_get_property)
+export(tw_get_wikipedia)
 export(tw_search)
 export(tw_set_cache_folder)
 importFrom(magrittr,"%>%")
