--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(tw_get_image)
 export(tw_get_label)
 export(tw_get_property)
 export(tw_get_wikipedia)
+export(tw_query)
 export(tw_search)
 export(tw_set_cache_folder)
 importFrom(magrittr,"%>%")
