--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,14 @@
 Package: tidywikidatar
 Title: Interact with Wikidata and get tidy data frames in response
-Version: 0.0.0.9000
+Version: 0.0.0.9001
 Authors@R: 
-    person(given = "Giorgio",
-           family = "Comai",
-           role = c("aut", "cre"),
-           email = "g@giorgiocomai.eu",
-           comment = c(ORCID = "0000-0002-0515-9542"))
+    c(person(given = "Giorgio",
+             family = "Comai",
+             role = c("aut", "cre"),
+             email = "g@giorgiocomai.eu",
+             comment = c(ORCID = "0000-0002-0515-9542")), 
+      person(given = "EDJNet",
+             role = "fnd"))
 Description: tidywikidatar makes it easy to query wikidata, get tidy data frames in response, and cache data in a local sqlite database.
 License: GPL (>= 3)
 Encoding: UTF-8
