--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: tidywikidatar
 Title: Interact with Wikidata and get tidy data frames in response
-Version: 0.0.0.9002
+Version: 0.0.0.9003
 Authors@R: 
     c(person(given = "Giorgio",
              family = "Comai",
@@ -27,3 +27,6 @@ Imports:
     tibble,
     purrr,
     usethis
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
