--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,9 @@ Imports:
     RSQLite,
     tibble,
     purrr,
-    usethis
+    usethis,
+    WikidataQueryServiceR,
+    fs
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
