--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,9 @@ export(tw_get_description)
 export(tw_get_image)
 export(tw_get_label)
 export(tw_get_property)
+export(tw_get_property_description)
+export(tw_get_property_label)
+export(tw_get_qualifiers)
 export(tw_get_wikipedia)
 export(tw_query)
 export(tw_search)
