--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Authors@R:
              comment = c(ORCID = "0000-0002-0515-9542")), 
       person(given = "EDJNet",
              role = "fnd"))
-Description: Query Wikidata with ease, get tidy data frames in response, and cache data in a local sqlite database.
+Description: Query 'Wikidata' with ease, get tidy data frames in response, and cache data in a local 'sqlite' database.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -36,4 +36,4 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Language: en-US
-URL: https://edjnet.github.io/tidywikidatar
+URL: https://edjnet.github.io/tidywikidatar/
