--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -49,5 +49,7 @@ jobs:
         run: R CMD INSTALL .
 
       - name: Deploy package
-        run: pkgdown::deploy_to_branch(new_process = FALSE)
+        run: |
+          install.packages("pkgdown")
+          pkgdown::deploy_to_branch(new_process = FALSE)
         shell: Rscript {0}
