prevent callr error in windows check gh

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -67,6 +67,7 @@ jobs:
       - name: Install dependencies
         run: |
           remotes::install_deps(dependencies = TRUE)
+          remotes::install_cran("callr")
           remotes::install_cran("rcmdcheck")
         shell: Rscript {0}
 
