extract caching code from tw_get() for simplicity and consistent testing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(expr)
 export(sym)
 export(syms)
 export(tw_check_cache)
+export(tw_check_cache_folder)
 export(tw_check_search)
 export(tw_create_cache_folder)
 export(tw_disable_cache)
@@ -19,7 +20,9 @@ export(tw_filter)
 export(tw_filter_first)
 export(tw_filter_people)
 export(tw_get)
+export(tw_get_cache_file)
 export(tw_get_cache_folder)
+export(tw_get_cached_item)
 export(tw_get_description)
 export(tw_get_image)
 export(tw_get_label)
@@ -33,6 +36,7 @@ export(tw_search)
 export(tw_search_item)
 export(tw_search_property)
 export(tw_set_cache_folder)
+export(tw_write_item_to_cache)
 importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
 importFrom(rlang,.data)
