--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(sym)
 export(syms)
 export(tw_check_cache)
 export(tw_check_cache_folder)
+export(tw_check_cached_items)
 export(tw_check_search)
 export(tw_create_cache_folder)
 export(tw_disable_cache)
