--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(tw_get)
 export(tw_get_cache_file)
 export(tw_get_cache_folder)
 export(tw_get_cached_item)
+export(tw_get_cached_qualifiers)
 export(tw_get_description)
 export(tw_get_image)
 export(tw_get_label)
@@ -38,6 +39,7 @@ export(tw_search_item)
 export(tw_search_property)
 export(tw_set_cache_folder)
 export(tw_write_item_to_cache)
+export(tw_write_qualifiers_to_cache)
 importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
 importFrom(rlang,.data)
