introduce tw_label() for easy labelling

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(tw_get_property_description)
 export(tw_get_property_label)
 export(tw_get_qualifiers)
 export(tw_get_wikipedia)
+export(tw_label)
 export(tw_query)
 export(tw_search)
 export(tw_search_item)
