--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(tw_get_label)
 export(tw_get_property)
 export(tw_get_property_description)
 export(tw_get_property_label)
+export(tw_get_property_single)
 export(tw_get_qualifiers)
 export(tw_get_wikipedia)
 export(tw_label)
