introduce set language once per session

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,7 +32,10 @@ Imports:
 Suggests: 
     spelling,
     roxygen2,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    knitr,
+    rmarkdown
 Config/testthat/edition: 3
 Language: en-US
 URL: https://edjnet.github.io/tidywikidatar/
+VignetteBuilder: knitr
