--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(tw_get_cached_qualifiers)
 export(tw_get_description)
 export(tw_get_image)
 export(tw_get_label)
+export(tw_get_language)
 export(tw_get_property)
 export(tw_get_property_description)
 export(tw_get_property_label)
@@ -40,6 +41,7 @@ export(tw_search)
 export(tw_search_item)
 export(tw_search_property)
 export(tw_set_cache_folder)
+export(tw_set_language)
 export(tw_write_item_to_cache)
 export(tw_write_qualifiers_to_cache)
 importFrom(magrittr,"%>%")
