--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(tw_check_cache)
 export(tw_check_cache_folder)
 export(tw_check_cached_items)
 export(tw_check_search)
+export(tw_connect_to_cache)
 export(tw_create_cache_folder)
 export(tw_disable_cache)
 export(tw_enable_cache)
