more efficient caching

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(tw_filter_people)
 export(tw_get)
 export(tw_get_cache_file)
 export(tw_get_cache_folder)
+export(tw_get_cache_table_name)
 export(tw_get_cached_item)
 export(tw_get_cached_qualifiers)
 export(tw_get_description)
@@ -35,6 +36,7 @@ export(tw_get_property_description)
 export(tw_get_property_label)
 export(tw_get_property_single)
 export(tw_get_qualifiers)
+export(tw_get_single)
 export(tw_get_wikipedia)
 export(tw_label)
 export(tw_query)
