--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,8 @@ Imports:
     usethis,
     WikidataQueryServiceR,
     fs,
-    rlang (>= 0.1.2)
+    rlang (>= 0.1.2),
+    progress
 Suggests: 
     spelling,
     roxygen2,
