introduce enhanced caching for searches

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(tw_get_cache_folder)
 export(tw_get_cache_table_name)
 export(tw_get_cached_item)
 export(tw_get_cached_qualifiers)
+export(tw_get_cached_search)
 export(tw_get_description)
 export(tw_get_image)
 export(tw_get_label)
@@ -47,6 +48,7 @@ export(tw_set_cache_folder)
 export(tw_set_language)
 export(tw_write_item_to_cache)
 export(tw_write_qualifiers_to_cache)
+export(tw_write_search_to_cache)
 importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
 importFrom(rlang,.data)
