basic item caching with alterantive db backends

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(tw_query)
 export(tw_search)
 export(tw_search_item)
 export(tw_search_property)
+export(tw_search_single)
 export(tw_set_cache_folder)
 export(tw_set_language)
 export(tw_write_item_to_cache)
