more consistent disconnecting from cache

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(tw_check_search)
 export(tw_connect_to_cache)
 export(tw_create_cache_folder)
 export(tw_disable_cache)
+export(tw_disconnect_from_cache)
 export(tw_enable_cache)
 export(tw_filter)
 export(tw_filter_first)
