--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(tw_get_cached_item)
 export(tw_get_cached_qualifiers)
 export(tw_get_cached_search)
 export(tw_get_description)
+export(tw_get_description_single)
 export(tw_get_image)
 export(tw_get_label)
 export(tw_get_language)
