update tw_get_qualifiers to new caching

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(tw_get_property)
 export(tw_get_property_description)
 export(tw_get_property_label)
 export(tw_get_qualifiers)
+export(tw_get_qualifiers_single)
 export(tw_get_single)
 export(tw_get_wikipedia)
 export(tw_label)
