--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,8 @@ export(tw_get_cached_search)
 export(tw_get_description)
 export(tw_get_field)
 export(tw_get_image)
+export(tw_get_image_metadata)
+export(tw_get_image_same_length)
 export(tw_get_label)
 export(tw_get_language)
 export(tw_get_property)
