--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,11 +32,13 @@ export(tw_get_cached_qualifiers)
 export(tw_get_cached_search)
 export(tw_get_description)
 export(tw_get_field)
+export(tw_get_id_of_wikipedia_page)
 export(tw_get_image)
 export(tw_get_image_metadata)
 export(tw_get_image_same_length)
 export(tw_get_label)
 export(tw_get_language)
+export(tw_get_links_from_wikipedia_page)
 export(tw_get_property)
 export(tw_get_property_description)
 export(tw_get_property_label)
@@ -47,6 +49,7 @@ export(tw_get_qualifiers)
 export(tw_get_qualifiers_single)
 export(tw_get_single)
 export(tw_get_wikipedia)
+export(tw_get_wikipedia_base_api_url)
 export(tw_label)
 export(tw_query)
 export(tw_search)
