tentatively introduce caching for image metadata

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(tw_get_field)
 export(tw_get_id_of_wikipedia_page)
 export(tw_get_image)
 export(tw_get_image_metadata)
+export(tw_get_image_metadata_single)
 export(tw_get_image_same_length)
 export(tw_get_label)
 export(tw_get_language)
