new params in tw_get_p() to get preferred or latest

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(tw_get_image_same_length)
 export(tw_get_label)
 export(tw_get_language)
 export(tw_get_links_from_wikipedia_page)
+export(tw_get_p)
 export(tw_get_property)
 export(tw_get_property_description)
 export(tw_get_property_label)
