--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,3 +41,6 @@ Config/testthat/edition: 3
 Language: en-US
 URL: https://edjnet.github.io/tidywikidatar/
 VignetteBuilder: knitr
+Depends: 
+    R (>= 2.10)
+LazyData: true
