--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(tw_create_cache_folder)
 export(tw_disable_cache)
 export(tw_disconnect_from_cache)
 export(tw_enable_cache)
+export(tw_extract_qualifier)
 export(tw_filter)
 export(tw_filter_first)
 export(tw_filter_people)
@@ -54,6 +55,7 @@ export(tw_get_wikipedia)
 export(tw_get_wikipedia_base_api_url)
 export(tw_label)
 export(tw_query)
+export(tw_reset_qualifiers_cache)
 export(tw_search)
 export(tw_search_item)
 export(tw_search_property)
