tw_get_qid_of_wikipedia_page() now caches results and returns df

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(tw_get_cache_file)
 export(tw_get_cache_folder)
 export(tw_get_cache_table_name)
 export(tw_get_cached_item)
+export(tw_get_cached_qid_of_wikipedia_page)
 export(tw_get_cached_qualifiers)
 export(tw_get_cached_search)
 export(tw_get_description)
@@ -57,6 +58,7 @@ export(tw_get_wikipedia_base_api_url)
 export(tw_label)
 export(tw_query)
 export(tw_reset_qualifiers_cache)
+export(tw_reset_wikipedia_page_cache)
 export(tw_search)
 export(tw_search_item)
 export(tw_search_property)
@@ -64,6 +66,7 @@ export(tw_search_single)
 export(tw_set_cache_folder)
 export(tw_set_language)
 export(tw_write_item_to_cache)
+export(tw_write_qid_of_wikipedia_page_to_cache)
 export(tw_write_qualifiers_to_cache)
 export(tw_write_search_to_cache)
 importFrom(magrittr,"%>%")
