--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(tw_filter)
 export(tw_filter_first)
 export(tw_filter_people)
 export(tw_get)
+export(tw_get_cache_db)
 export(tw_get_cache_file)
 export(tw_get_cache_folder)
 export(tw_get_cache_table_name)
@@ -64,6 +65,7 @@ export(tw_search)
 export(tw_search_item)
 export(tw_search_property)
 export(tw_search_single)
+export(tw_set_cache_db)
 export(tw_set_cache_folder)
 export(tw_set_language)
 export(tw_write_item_to_cache)
