move tw_extract to own function for easier testing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(tw_disable_cache)
 export(tw_disconnect_from_cache)
 export(tw_enable_cache)
 export(tw_extract_qualifier)
+export(tw_extract_single)
 export(tw_filter)
 export(tw_filter_first)
 export(tw_filter_people)
