introduce by default rank in calls to tw_get

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ export(tw_get_wikipedia_page_qid)
 export(tw_get_wikipedia_page_qid_single)
 export(tw_label)
 export(tw_query)
+export(tw_reset_item_cache)
 export(tw_reset_qualifiers_cache)
 export(tw_reset_wikipedia_page_cache)
 export(tw_reset_wikipedia_page_links_cache)
