--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(tw_get_p)
 export(tw_get_property)
 export(tw_get_property_description)
 export(tw_get_property_label)
+export(tw_get_property_label_single)
 export(tw_get_property_same_length)
 export(tw_get_property_with_details)
 export(tw_get_property_with_details_single)
