--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ export(tw_get_wikipedia_page_links)
 export(tw_get_wikipedia_page_links_single)
 export(tw_get_wikipedia_page_qid)
 export(tw_get_wikipedia_page_qid_single)
+export(tw_get_wikipedia_sections_api_url)
 export(tw_label)
 export(tw_query)
 export(tw_reset_item_cache)
