introduce tw_get_wikipedia_page_sections()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(tw_get_cached_qualifiers)
 export(tw_get_cached_search)
 export(tw_get_cached_wikipedia_page_links)
 export(tw_get_cached_wikipedia_page_qid)
+export(tw_get_cached_wikipedia_page_sections)
 export(tw_get_description)
 export(tw_get_field)
 export(tw_get_image)
@@ -60,6 +61,8 @@ export(tw_get_wikipedia_page_links)
 export(tw_get_wikipedia_page_links_single)
 export(tw_get_wikipedia_page_qid)
 export(tw_get_wikipedia_page_qid_single)
+export(tw_get_wikipedia_page_sections)
+export(tw_get_wikipedia_page_sections_single)
 export(tw_get_wikipedia_sections_api_url)
 export(tw_label)
 export(tw_query)
@@ -67,6 +70,7 @@ export(tw_reset_item_cache)
 export(tw_reset_qualifiers_cache)
 export(tw_reset_wikipedia_page_cache)
 export(tw_reset_wikipedia_page_links_cache)
+export(tw_reset_wikipedia_page_sections_cache)
 export(tw_search)
 export(tw_search_item)
 export(tw_search_property)
@@ -79,6 +83,7 @@ export(tw_write_qid_of_wikipedia_page_to_cache)
 export(tw_write_qualifiers_to_cache)
 export(tw_write_search_to_cache)
 export(tw_write_wikipedia_page_links_to_cache)
+export(tw_write_wikipedia_page_sections_to_cache)
 importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
 importFrom(rlang,.data)
