introduce tentative tw_get_wikipedia_page_section_links()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,8 +61,10 @@ export(tw_get_wikipedia_page_links)
 export(tw_get_wikipedia_page_links_single)
 export(tw_get_wikipedia_page_qid)
 export(tw_get_wikipedia_page_qid_single)
+export(tw_get_wikipedia_page_section_links)
 export(tw_get_wikipedia_page_sections)
 export(tw_get_wikipedia_page_sections_single)
+export(tw_get_wikipedia_section_links_api_url)
 export(tw_get_wikipedia_sections_api_url)
 export(tw_label)
 export(tw_query)
