introduce tw_get_all_with_p

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(tw_filter)
 export(tw_filter_first)
 export(tw_filter_people)
 export(tw_get)
+export(tw_get_all_with_p)
 export(tw_get_cache_db)
 export(tw_get_cache_file)
 export(tw_get_cache_folder)
