--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: tidywikidatar
 Title: Explore 'Wikidata' Through Tidy Data Frames
-Version: 0.5.0.9003
+Version: 0.5.0.9004
 Authors@R: 
     c(person(given = "Giorgio",
              family = "Comai",
@@ -31,7 +31,8 @@ Imports:
     rlang (>= 0.1.2),
     progress,
     jsonlite,
-    pool
+    pool,
+    WikipediR
 Suggests: 
     spelling,
     roxygen2,
