fix issues with checks, where and tidyselect

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,8 @@ Imports:
     jsonlite,
     pool,
     WikipediR,
-    vctrs
+    vctrs,
+    tidyselect
 Suggests: 
     spelling,
     roxygen2,
