--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,7 @@ export(tw_write_qualifiers_to_cache)
 export(tw_write_search_to_cache)
 export(tw_write_wikipedia_page_links_to_cache)
 export(tw_write_wikipedia_page_sections_to_cache)
+import(utils)
 importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
 importFrom(rlang,.data)
