introduce tw_check_cache_index for troubleshooting perfomance issues

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(sym)
 export(syms)
 export(tw_check_cache)
 export(tw_check_cache_folder)
+export(tw_check_cache_index)
 export(tw_check_cached_items)
 export(tw_check_qid)
 export(tw_check_search)
