--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -60,6 +60,7 @@ reference:
   - tw_check_cache_folder
   - tw_check_cached_items
   - tw_disconnect_from_cache
+  - tw_check_cache_index
   - starts_with("tw_get_cache")
   - starts_with("tw_write_")
 - title: "Functions used internally to check for validity of data"
