introduce tw_index_cache_search for speed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ export(tw_get_wikipedia_page_section_links)
 export(tw_get_wikipedia_page_sections)
 export(tw_get_wikipedia_section_links_api_url)
 export(tw_get_wikipedia_sections_api_url)
+export(tw_index_cache_search)
 export(tw_label)
 export(tw_query)
 export(tw_reset_item_cache)
