introduce tw_get_p1 to reduce typing with piped operations

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -14,6 +14,7 @@ reference:
   - tw_get_label
   - tw_get_description
   - tw_get_property_same_length
+  - tw_get_p1
   - tw_get_property_label
   - tw_get_property_description
 - title: "Labelling"
