--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(tw_get_image_same_length)
 export(tw_get_label)
 export(tw_get_language)
 export(tw_get_p)
+export(tw_get_p1)
 export(tw_get_p_wide)
 export(tw_get_property)
 export(tw_get_property_description)
