--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,7 +40,8 @@ Suggests:
     testthat (>= 3.0.0),
     knitr,
     rmarkdown,
-    odbc
+    odbc,
+    assertthat
 Config/testthat/edition: 3
 Language: en-US
 URL: https://edjnet.github.io/tidywikidatar/
