--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports: 
     magrittr,
-    dplyr,
+    dplyr (>= 1.1.0),
     tidyr,
     WikidataR,
     stringr,
