fix tw_prune documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ export(tw_get_wikipedia_sections_api_url)
 export(tw_index_cache_item)
 export(tw_index_cache_search)
 export(tw_label)
+export(tw_prune)
 export(tw_query)
 export(tw_reset_item_cache)
 export(tw_reset_qualifiers_cache)
