--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ export(tw_get_property_label)
 export(tw_get_property_same_length)
 export(tw_get_property_with_details)
 export(tw_get_qualifiers)
+export(tw_get_user_agent)
 export(tw_get_wikipedia)
 export(tw_get_wikipedia_base_api_url)
 export(tw_get_wikipedia_category_members)
@@ -80,6 +81,7 @@ export(tw_search_property)
 export(tw_set_cache_db)
 export(tw_set_cache_folder)
 export(tw_set_language)
+export(tw_set_user_agent)
 export(tw_write_item_to_cache)
 export(tw_write_qid_of_wikipedia_page_to_cache)
 export(tw_write_qualifiers_to_cache)
