--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(tw_get_field)
 export(tw_get_image)
 export(tw_get_image_metadata)
 export(tw_get_image_same_length)
+export(tw_get_item)
 export(tw_get_label)
 export(tw_get_language)
 export(tw_get_p)
