fix pkgdown yaml

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -35,6 +35,7 @@ reference:
   - tw_get_all_with_p
 - title: Function to retrieve *all* information available in Wikidata, as a list
   desc: Mostly used internally, but exported as it may be relevant to deal with edge cases or for troubleshoothing.
+  contents:
   - tw_get_item
 - title: Retrieve information about images
   desc: Since images are not stored within Wikidata, but often relevant to those working
